# sp_web

./: .gitignore  Cargo.toml  Dockerfile  application-dev.yml  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
.run/: Docker Image.run.xml
resource/: application.yml
src/: lib.rs  main.rs
src/config/: global_config.rs  init_load_config.rs  log.rs  mod.rs  models.rs
src/constant/: app.rs
src/controller/: bat_controller.rs  bin_controller.rs  file_controller.rs  mod.rs  root_controller.rs
src/pb/: person.proto  role.proto
src/pb/schema/: itemData.proto
