[package]
name = "sp_web"
version = "0.1.0"
edition = "2021"
authors = ["KuroNeko"]
description = "lovely web"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter","local-time","registry"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
clap = { version = "4.3", features = ["derive"] }