[package]
name = "sp_web"
version = "0.1.0"
edition = "2021"
authors = ["KuroNeko"]
description = "lovely web"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0", features = ["logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
schemars = "0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter","local-time","registry"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
clap = { version = "4", features = ["derive"] }
lazy_static = "1"

reqwest = { version = "0", features = ["stream"] }
anyhow = "1"